--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<head> Hola </head>
-dasdad
-
-xcxcvcvx
-sdfdwqdawd
-xzcxczxc
-
-sdffffffffffffffff
+<HTML>
+<HEAD>
+<TITLE>Ejemplo 4</TITLE>
+</HEAD>
+<BODY>
+Esto es texto simple: cada navegador lo visualizará según su configuración por defecto.<BR>
+<FONT SIZE="1">Este texto es tamaño 1.</FONT><BR>
+<FONT SIZE="2">Este texto es tamaño 2.</FONT><BR>
+<FONT SIZE="4">Este texto es tamaño 4.</FONT><BR>
+<FONT SIZE="+1">Este texto es tamaño +1 (que es lo mismo que tamaño 4).</FONT><BR>
+<FONT FACE="Arial" SIZE="5" COLOR="FFFF00">Este texto posee varias especificaciones de formato.</FONT>
+</BODY>
+</HTML>
